[package]
name = "yauc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cool datastructures
hashbrown = "0.13.1"
parking_lot = "0.12.1"
bitvec = "1.0.1"
# crossbeam?

# macro stuff
# syn = "1.0.103"
# proc-macro2 = "1.0.47"

# error handling and stuff
anyhow = "1.0.66"
pretty_assertions = "1.3.0"

# logging utils
colorful = "0.2.1"
tracing = "0.1.37"
chrono = "0.4.23"

# nice to have
autodefault = "2.0.0"
num_enum = "0.5.7"
derivative = "2.2.0"
wyz = "0.5.0"
default = "0.1.2"